# fiap_production_service

./: .gitignore  Dockerfile  README.md  docker-compose.yaml  entrypoint.sh  pyproject.toml
.github/workflows/: deployment.yml  sonarqube.yml
alembic/: env.py
alembic/versions/: 791144e1697b_create_order_production_table.py
app/: config.py  database.py  main.py  pika.py
app/helpers/: order.py
app/models/: .order.py.swp  order.py
app/routers/: production.py
app/schemas/: order.py
app/tests/: db.py  test_main.py
